--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,14 @@
     android:fitsSystemWindows="true"
     tools:context=".activity.MainActivity">
 
-    <com.fitz.abus.fitzView.FitzActionBar
+    <com.fitz.abus.fitzview.FitzActionBar
         android:id="@+id/fitzactionbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" >
 
-    </com.fitz.abus.fitzView.FitzActionBar>
+    </com.fitz.abus.fitzview.FitzActionBar>
 
 
     <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
