--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00BFFF</color>
+    <color name="colorPrimary">#00bfff</color>
     <color name="colorPrimaryDark">#00BFFF</color>
-    <color name="colorAccent">#00BFFF</color>
+    <color name="colorAccent">#00bfff</color>
     <color name="primary_dark_material_dark_1">#00BFFF</color>
     <color name="transparent">#00000000</color>
 </resources>
