--- a/app/src/main/res/layout/activity_bus_station_list.xml
+++ b/app/src/main/res/layout/activity_bus_station_list.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".activity.AddBusActivity">
 
+
     <com.fitz.abus.fitzview.FitzActionBar
         android:id="@+id/bus_station_list_fitzactionbar"
         android:layout_width="wrap_content"
@@ -15,103 +16,119 @@
 
     </com.fitz.abus.fitzview.FitzActionBar>
 
-    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/bus_station_tableLayout"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:background="@color/qmui_config_color_white"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bus_station_list_fitzactionbar">
 
+        <TextView
+            android:id="@+id/bus_station_tv_bus_name"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:gravity="center"
+            android:text="          "
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <TableRow
-            android:id="@+id/row1"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tv_to"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="开往："
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@+id/bus_station_tv_end_stop"
+            app:layout_constraintStart_toEndOf="@+id/bus_station_tv_bus_name"
+            app:layout_constraintTop_toTopOf="@+id/bus_station_tv_end_stop" />
 
-            <TextView
-                android:id="@+id/bus_station_tv_busname"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20sp" />
+        <TextView
+            android:id="@+id/tv_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="始发："
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@+id/bus_station_tv_start_stop"
+            app:layout_constraintStart_toEndOf="@+id/bus_station_tv_bus_name"
+            app:layout_constraintTop_toTopOf="@+id/bus_station_tv_start_stop" />
 
-        </TableRow>
+        <TextView
+            android:id="@+id/bus_station_tv_start_stop"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:text="TextView"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toStartOf="@+id/bus_station_switch"
+            app:layout_constraintStart_toEndOf="@+id/tv_to"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <TableRow
-            android:id="@+id/row2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/bus_station_tv_end_stop"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:text="TextView"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toStartOf="@+id/bus_station_switch"
+            app:layout_constraintStart_toEndOf="@+id/tv_start"
+            app:layout_constraintTop_toBottomOf="@+id/bus_station_tv_start_stop" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="起始时间"
-                android:textSize="15sp" />
+        <ImageButton
+            android:id="@+id/bus_station_switch"
+            android:layout_width="50dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="10dp"
+            android:background="@color/qmui_config_color_transparent"
+            android:padding="10dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="@+id/bus_station_tv_end_stop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/bus_station_tv_start_stop"
+            app:srcCompat="@drawable/switch_direction" />
 
-            <TextView
-                android:id="@+id/bus_station_tv_seTime"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="center"
-                android:textSize="15sp" />
-
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/row3"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/bus_station_tv_start_stop"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20sp" />
-
-            <Button
-                android:id="@+id/bus_station_switch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="开往" />
-
-            <TextView
-                android:id="@+id/bus_station_tv_end_stop"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20sp" />
-        </TableRow>
+        <TextView
+            android:id="@+id/bus_station_se_time"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="5dp"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/bus_station_switch"
+            app:layout_constraintStart_toStartOf="@+id/bus_station_tv_end_stop"
+            app:layout_constraintTop_toBottomOf="@+id/bus_station_tv_end_stop" />
 
 
-    </TableLayout>
+    </android.support.constraint.ConstraintLayout>
 
     <com.fitz.abus.fitzview.FitzRecyclerView
-        android:id="@+id/bus_station_bus_station_list"
+        android:id="@+id/bus_station_stop_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bus_station_tableLayout">
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
     </com.fitz.abus.fitzview.FitzRecyclerView>
 
