--- a/app/src/main/res/layout/bus_base.xml
+++ b/app/src/main/res/layout/bus_base.xml
@@ -8,7 +8,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/bus_station_tv_bus_name"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="2dp"
@@ -29,22 +29,22 @@
         android:layout_marginTop="2dp"
         android:text="始发："
         android:textSize="10sp"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintStart_toEndOf="@+id/bus_station_tv_bus_name"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/tv_to"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="2dp"
         android:text="开往："
         android:textSize="10sp"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintStart_toEndOf="@+id/bus_station_tv_bus_name"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/bus_station_tv_start_stop"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -62,6 +62,21 @@
         android:layout_marginTop="2dp"
         android:text="TextView"
         android:textSize="10sp"
-        app:layout_constraintStart_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        app:layout_constraintStart_toEndOf="@+id/tv_to"
+        app:layout_constraintTop_toBottomOf="@+id/bus_station_tv_start_stop" />
+
+    <ImageButton
+        android:id="@+id/bus_station_switch"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
+        android:background="@color/qmui_config_color_transparent"
+        android:padding="15dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/switch_direction" />
 </android.support.constraint.ConstraintLayout>
