--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -29,7 +29,7 @@
         android:maxWidth="200dp"
         android:minHeight="24dp"
         android:scrollHorizontally="false"
-        android:text="@string/default_city"
+        android:text=""
         android:textColor="@android:color/white"
         android:textSize="18sp" />
 
