--- a/app/src/main/res/layout/bus_info_card.xml
+++ b/app/src/main/res/layout/bus_info_card.xml
@@ -21,7 +21,7 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/tv_stationId"
+            android:id="@+id/tv_stationName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
