--- a/app/src/main/res/layout/bus_base.xml
+++ b/app/src/main/res/layout/bus_base.xml
@@ -8,7 +8,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/bus_station_tv_bus_name"
+        android:id="@+id/tv_line_name"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="2dp"
@@ -29,7 +29,7 @@
         android:layout_marginTop="2dp"
         android:text="始发："
         android:textSize="10sp"
-        app:layout_constraintStart_toEndOf="@+id/bus_station_tv_bus_name"
+        app:layout_constraintStart_toEndOf="@+id/tv_line_name"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -40,11 +40,11 @@
         android:layout_marginTop="2dp"
         android:text="开往："
         android:textSize="10sp"
-        app:layout_constraintStart_toEndOf="@+id/bus_station_tv_bus_name"
+        app:layout_constraintStart_toEndOf="@+id/tv_line_name"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
-        android:id="@+id/bus_station_tv_start_stop"
+        android:id="@+id/tv_start_stop"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -63,7 +63,7 @@
         android:text="TextView"
         android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@+id/tv_to"
-        app:layout_constraintTop_toBottomOf="@+id/bus_station_tv_start_stop" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_start_stop" />
 
     <ImageButton
         android:id="@+id/bus_station_switch"
