--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#00bfff</color>
     <color name="colorPrimaryDark">#00BFFF</color>
-    <color name="colorAccent">#00bfff</color>
+    <color name="colorAccent">#00BFFF</color>
     <color name="primary_dark_material_dark_1">#00BFFF</color>
     <color name="transparent">#00000000</color>
 </resources>
