--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,11 +2,10 @@
 <com.fitz.abus.fitzview.FitzRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fg_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_centerHorizontal="true"
-    android:id="@+id/fg_container"
-    android:background="@color/btn_ghost_blue_text_disabled">
+    android:layout_centerHorizontal="true">
 
 
 </com.fitz.abus.fitzview.FitzRecyclerView>
