0109 主页功能完成，滑动动画还需要优化 item布局需要优化

--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -16,7 +16,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="1dp"
-        android:layout_toRightOf="@+id/recycler_item"
+        android:layout_toEndOf="@+id/recycler_item"
         android:background="@android:color/holo_red_dark"
         android:gravity="center"
         android:padding="10dp"
