--- a/app/src/main/res/layout/bus_card.xml
+++ b/app/src/main/res/layout/bus_card.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
+    android:id="@+id/bus_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -15,7 +15,6 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
         android:gravity="center"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -23,7 +22,7 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_end_stop"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/tv_start_stop" />
 
     <TextView
         android:id="@+id/tv_to"
@@ -52,7 +51,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:text="TextView"
         android:textSize="15sp"
@@ -90,23 +89,54 @@
         android:id="@+id/tv_seTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:gravity="center"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_stationName"
         app:layout_constraintEnd_toEndOf="@+id/tv_line_name"
-        app:layout_constraintStart_toStartOf="@+id/tv_line_name"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_stationName"
         tools:text="              " />
 
-    <TableLayout
-        android:id="@+id/tableLayout2"
+    <TextView
+        android:id="@+id/tv_stationName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:gravity="start"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_seTime"
+        app:layout_constraintTop_toBottomOf="@+id/tv_end_stop"
+        tools:text="                      " />
+
+    <include
+        android:id="@+id/arrival"
+        layout="@layout/arrival_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/bus_station_switch"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_stationName" />
+
+    <!--<TableLayout
+        android:id="@+id/bus_detials"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:orientation="horizontal"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_stationName">
@@ -193,22 +223,7 @@
                 android:gravity="center"
                 android:textSize="15sp" />
         </TableRow>
-    </TableLayout>
-
-    <TextView
-        android:id="@+id/tv_stationName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="5dp"
-        android:gravity="start"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/tv_to"
-        app:layout_constraintTop_toBottomOf="@+id/tv_line_name"
-        tools:text="                      " />
+    </TableLayout>-->
 
 
 </android.support.constraint.ConstraintLayout>
