--- a/app/src/main/res/layout/arrival_layout.xml
+++ b/app/src/main/res/layout/arrival_layout.xml
@@ -3,10 +3,12 @@
     android:id="@+id/bus_detials"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="10dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginEnd="10dp"
-    android:orientation="horizontal">
+    android:background="@android:color/darker_gray"
+    android:orientation="horizontal"
+    android:paddingStart="10dp"
+    android:paddingTop="5dp"
+    android:paddingEnd="10dp"
+    android:paddingBottom="5dp">
 
     <TableRow
         android:id="@+id/row4"
