--- a/slideviewdemo/src/main/res/layout/bus_card.xml
+++ b/slideviewdemo/src/main/res/layout/bus_card.xml
@@ -2,13 +2,12 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/bus_item"
+    android:id="@+id/item_content_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/bus_station_list_fitzactionbar">
+    app:layout_constraintStart_toStartOf="parent">
 
     <TextView
         android:id="@+id/tv_line_name"
