--- a/slideviewdemo/src/main/res/layout/activity_main.xml
+++ b/slideviewdemo/src/main/res/layout/activity_main.xml
@@ -9,5 +9,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fg_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
+    <include layout="@layout/recycler_item"/>
+
 </android.support.constraint.ConstraintLayout>
