--- a/slideviewdemo/src/main/res/layout/recycler_item.xml
+++ b/slideviewdemo/src/main/res/layout/recycler_item.xml
@@ -5,11 +5,18 @@
     android:layout_height="wrap_content">
 
 
-    <include android:id="@+id/item_content"
-        layout="@layout/bus_card"/>
+    <include
+        android:id="@+id/item_content"
+        layout="@layout/bus_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-    <include android:id="@+id/item_menu"
-        layout="@layout/menu_layout"/>
+    <include
+        android:id="@+id/item_menu"
+        layout="@layout/menu_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/item_content" />
 
 
 </com.wind.fitz.slideviewdemo.fitzview.FitzSlideItem>
