--- a/app/src/main/res/layout/bus_card_new.xml
+++ b/app/src/main/res/layout/bus_card_new.xml
@@ -5,8 +5,9 @@
     android:id="@+id/bus_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:background="@drawable/item_bg"
+    android:orientation="horizontal"
+    android:paddingBottom="10dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/bus_station_list_fitzactionbar">
@@ -14,115 +15,107 @@
     <TextView
         android:id="@+id/tv_line_name"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="10dp"
-        android:gravity="center"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:text="          "
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_end_stop"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_start_stop" />
-
-    <TextView
-        android:id="@+id/tv_to"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="开往："
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_end_stop"
-        app:layout_constraintStart_toEndOf="@+id/tv_line_name"
-        app:layout_constraintTop_toTopOf="@+id/tv_end_stop" />
-
-    <TextView
-        android:id="@+id/tv_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="始发："
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_start_stop"
-        app:layout_constraintStart_toEndOf="@+id/tv_line_name"
-        app:layout_constraintTop_toTopOf="@+id/tv_start_stop" />
-
-    <TextView
-        android:id="@+id/tv_start_stop"
-        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:text="TextView"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toStartOf="@+id/bus_station_switch"
-        app:layout_constraintStart_toEndOf="@+id/tv_to"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_end_stop"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="10dp"
-        android:text="TextView"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toStartOf="@+id/bus_station_switch"
-        app:layout_constraintStart_toEndOf="@+id/tv_start"
-        app:layout_constraintTop_toBottomOf="@+id/tv_start_stop" />
-
-    <ImageButton
-        android:id="@+id/bus_station_switch"
-        android:layout_width="50dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="10dp"
-        android:background="@color/qmui_config_color_transparent"
-        android:padding="10dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_end_stop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_start_stop"
-        app:srcCompat="@drawable/switch_direction" />
-
-    <TextView
-        android:id="@+id/tv_seTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:gravity="center"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_stationName"
+        android:padding="5dp"
+        android:text="763"
+        android:textSize="50sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_stationName"
-        tools:text="              " />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_stationName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_margin="10dp"
         android:layout_marginEnd="10dp"
-        android:gravity="start"
+        android:ellipsize="marquee"
+        android:gravity="center|start"
+        android:padding="5dp"
+        android:singleLine="true"
+        android:text="上海南站"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_line_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_seTime"
-        app:layout_constraintTop_toBottomOf="@+id/tv_end_stop"
+        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintStart_toEndOf="@+id/tv_line_name"
         tools:text="                      " />
 
+    <TextView
+        android:id="@+id/tv_seTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="05:00-22:00"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="@+id/iv_bound_for"
+        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintStart_toStartOf="@+id/iv_bound_for"
+        app:layout_constraintTop_toBottomOf="@+id/tv_line_name"
+        tools:text="              " />
+
+    <TextView
+        android:id="@+id/tv_start_stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="10dp"
+        android:text="出发站"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_seTime" />
+
+    <TextView
+        android:id="@+id/tv_end_stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:text="终点站"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/iv_bound_for" />
+
+    <ImageView
+        android:id="@+id/iv_bound_for"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_start_stop"
+        app:layout_constraintEnd_toStartOf="@+id/tv_end_stop"
+        app:layout_constraintStart_toEndOf="@+id/tv_start_stop"
+        app:layout_constraintTop_toTopOf="@+id/tv_start_stop"
+        app:srcCompat="@drawable/bound_for" />
+
+    <ImageButton
+        android:id="@+id/item_search"
+        android:layout_width="0dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@color/qmui_config_color_transparent"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_bound_for"
+        app:srcCompat="@drawable/search_down" />
+
     <include
-        android:id="@+id/arrival1"
+        android:id="@+id/arrival"
         layout="@layout/arrival_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/bus_station_switch"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_stationName" />
+        app:layout_constraintTop_toBottomOf="@+id/item_search" />
 
     <!--<TableLayout
         android:id="@+id/bus_detials"
