--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -2,18 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_menu_layout"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:paddingStart="5dp"
-    android:paddingEnd="5dp">
+    android:paddingEnd="15dp">
 
     <ImageButton
         android:id="@+id/item_delete"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
         android:background="@android:color/transparent"
         android:clickable="true"
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/delete" />
+
 </LinearLayout>
