--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -5,8 +5,13 @@
     android:layout_height="wrap_content">
 
 
-    <include android:id="@+id/item_content"
-        layout="@layout/bus_card"/>
+    <include
+        android:id="@+id/item_content"
+        layout="@layout/bus_card_new"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp" />
 
     <!--<TextView
         android:id="@+id/item_delete"
@@ -28,12 +33,12 @@
     <include
         android:id="@+id/item_menu"
         layout="@layout/menu_layout"
-        android:layout_width="50dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignBottom="@+id/item_content"
-        android:layout_toRightOf="@+id/item_content"
-        android:layout_marginLeft="1dp"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="11dp"
         android:layout_toEndOf="@+id/item_content" />
 
 
