--- a/slideviewdemo/src/main/res/values/colors.xml
+++ b/slideviewdemo/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#00bfff</color>
+    <color name="colorPrimaryDark">#00BFFF</color>
+    <color name="colorAccent">#00BFFF</color>
+    <color name="primary_dark_material_dark_1">#00BFFF</color>
+    <color name="transparent">#00000000</color>
+    <color name="main_bg">#E0EEEE</color>
+    <color name="recycler_item">#FFFAFA</color>
 </resources>
