--- a/app/src/main/res/layout/add_recycleview_item.xml
+++ b/app/src/main/res/layout/add_recycleview_item.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/line_name"
+        android:id="@+id/busName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
